@@ -15,14 +15,17 @@ public class Test {
 */
 
 import java.net.URL;
+import java.net.URI;
 import javax.swing.ImageIcon;
 import javax.swing.JOptionPane;
 
 public class ImageAndGreeting {
 	
 	public static void main(String[] args) throws Exception {
-		URL imageLocation = new URL("https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/White_and_yellow_flower.JPG/320px-White_and_yellow_flower.JPG");
-		JOptionPane.showMessageDialog(null, "Hi, Dario!", "Greeting Box", JOptionPane.PLAIN_MESSAGE, new ImageIcon(imageLocation));
+		String ValidLink = "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/White_and_yellow_flower.JPG/320px-White_and_yellow_flower.JPG";
+		URI imageLocationURI = URI.create(ValidLink);
+		URL imageLocationURL = imageLocationURI.toURL();
+		JOptionPane.showMessageDialog(null, "Hi, Dario!", "Greeting Box", JOptionPane.PLAIN_MESSAGE, new ImageIcon(imageLocationURL));
 		System.exit(0);
 	}
 	
